ready to start with news

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity
             android:label="@string/app_name"
             android:name=".IBistuGapActivity"
-            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
              >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
